--- a/resources/css/radio.css
+++ b/resources/css/radio.css
@@ -4,7 +4,7 @@
 
 }
 input.styl{
-    margin:20px;
+
 }
 
 .radio-toolbar input[type="radio"] {
@@ -15,7 +15,7 @@ input.styl{
 
 .radio-toolbar label {
     display: inline-block;
-    background-color: #ddd;
+    background-color: blue;
     padding: 10px 20px;
     font-family: sans-serif, Arial;
     font-size: 16px;
