--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -20,21 +20,21 @@ button{
     text-transform: uppercase;
     letter-spacing: 10px;
     color:black;
-
+   
 
 }
 
 button:hover{
-// text-shadow: 0 0 5px #15f4ee, 0 0 5px #15f4ee;
+/* text-shadow: 0 0 5px #15f4ee, 0 0 5px #15f4ee;*/
     text-shadow: 0 0 5px black, 0 0 5px black;
 }
 .glow-on-hover {
-    width: 140px;
+    width: 126px;
     height: 50px;
     border: none;
     outline: none;
 
-// background: #111;
+/* background: #111;*/
     cursor: pointer;
     position: relative;
     z-index: 0;
@@ -60,7 +60,7 @@ button:hover{
 }
 
 .glow-on-hover:active {
-//color: #000
+/*color: #000*/
 }
 
 .glow-on-hover:active:after {
@@ -77,7 +77,7 @@ button:hover{
     position: absolute;
     width: 100%;
     height: 100%;
-//background: #111;
+/*background: #111;*/
     left: 0;
     top: 0;
     border-radius: 10px;
